# ImageEditor

./: CMakeLists.txt  functions.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stb_image.h  stb_image_write.h
